--- a/CPI/.settings/org.eclipse.core.resources.prefs
+++ b/CPI/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
 encoding//src/pkg/skapik/cpi/functions/Renderer.java=UTF-8
+encoding//src/pkg/skapik/cpi/main/CPI.java=UTF-8
